<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signup"
    android:orientation="vertical"
    tools:context=".signUp">


    <TextView
        android:id="@+id/WelcomeSignUp"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:gravity="bottom"
        android:layout_marginStart="40dp"
        android:text="@string/welcome_nsign_up"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameLayout"
        android:layout_width="match_parent"
        android:layout_height="98dp"
        android:hint="@string/UsernamE"
        android:textColorHint="@color/black"
        app:startIconTint="@color/black"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:helperText="*Required"
        app:helperTextTextColor="@color/red"
        app:startIconDrawable="@drawable/baseline_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameText"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:layout_height="60dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        android:layout_width="match_parent"
        android:layout_height="98dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textColorHint="@color/black"
        app:startIconTint="@color/black"
        app:helperText="*Required"
        app:helperTextTextColor="@color/red"
        app:startIconDrawable="@drawable/baseline_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textColor="@color/black"
            android:hint="@string/Email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/paswdLayout"
        android:layout_width="match_parent"
        android:layout_height="98dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/black"
        android:textColorHint="@color/black"
        app:startIconTint="@color/black"
        app:helperText="*Required"
        app:helperTextTextColor="@color/red"
        app:startIconDrawable="@drawable/baseline_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/paswdText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textColor="@color/black"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="166dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:paddingHorizontal="33dp"
        android:text="@string/signup"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/clickSignIn"
        android:layout_width="match_parent"
        android:layout_marginBottom="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:text="@string/if_already_registered_sign_in" />

</LinearLayout>