<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signup"
    android:orientation="vertical"
    tools:context=".signUp">


    <TextView
        android:id="@+id/WelcomeSignIn"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:gravity="bottom"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/welcome_nsign_in"
        android:textSize="30sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameLayout2"
        android:layout_width="match_parent"
        android:layout_height="98dp"
        android:hint="@string/UsernamE"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:helperText="*Required"
        app:helperTextTextColor="@color/red"
        app:startIconDrawable="@drawable/baseline_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameText2"
            android:layout_width="match_parent"
            android:layout_height="60dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/paswdLayout2"
        android:layout_width="match_parent"
        android:layout_height="98dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:endIconMode="password_toggle"
        app:helperText="*Required"
        app:helperTextTextColor="@color/red"
        app:startIconDrawable="@drawable/baseline_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/paswdText2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="166dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="180dp"
        android:layout_weight="1"
        android:backgroundTint="@color/black"
        android:paddingHorizontal="33dp"
        android:text="@string/sign_in"
        android:textSize="20sp" />


</LinearLayout>